add remove button to remove from Mongo colleciton

--- a/akqa-match.html
+++ b/akqa-match.html
@@ -18,7 +18,9 @@
 </template>
 
 <template name="person">
-  <li>{{name}} - {{department}} - {{title}} - {{client}}</li>
+  <li>{{name}} - {{department}} - {{title}} - {{client}} 
+    <button class='delete'>remove</button>
+  </li>
 </template>
 
 <template name="add_person_form">
